@@ -1,3 +1,7 @@
+2016-11-30 Robert Wolff <robert.wolff@cern.ch>
+	* Updated Electron Charge ID Selector Tool usage BDT output for loose
+	electrons?
+
 2016-11-22 Robert Wolff <robert.wolff@cern.ch>
 	* Fixed Run1 OLR application
 
